--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "img-loader": "^3.0.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "terser": "^3.14.1",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
