--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^7.1.2",
+    "@types/webpack-env": "^1.13.7",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "img-loader": "^3.0.1",
