--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,6 +61,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "exclude": [
+    "codegen.js",
     "node_modules",
     "build",
     "scripts",
